commit and push, 1/16/2023, 1028

--- a/content/coral_size.qmd
+++ b/content/coral_size.qmd
@@ -163,6 +163,10 @@ tukey <- TukeyHSD(model_1.aov)
 ```
 
 ```{r}
+tukey
+```
+
+```{r}
 # compact letter display
 cld <- multcompLetters4(model_1.aov, tukey)
 ```
