--- a/content/percent_cover_poci.qmd
+++ b/content/percent_cover_poci.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Percent Cover Poritid"
+title: "Percent Cover"
 author: "jjh"
 date: "Last compiled on `r format(Sys.time(), '%d %B, %Y %H:%M')`"
 editor: visual
@@ -40,7 +40,6 @@ library(modelsummary)
 library(kableExtra)
 library(gt)
 require(MASS)
-library(multcomp)
 ```
 
 *From* **Damgaard & Irvine (2019)** Using the beta distribution to analyse plant cover data *Journal of Ecology. 107:2747-2759*
@@ -55,55 +54,34 @@ Fcn.CreateSummary.betareg <- function(object.betareg){
    }
 ```
 
-# ```{r, include = FALSE}
-# #p_cover = read_csv('LSMclassGrid.csv') %>% 
-# #  group_by(Site) %>%
-# #  mutate(
-# #    pland_decimal = pland*0.01
-# #  ) %>%
-# #  mutate_at(vars(Site, cover, plot_id), factor)
-# ```
-
-# ```{r, include = TRUE}
-# p_cover = read_csv('rpn_percent_cover.csv') %>% 
-#   group_by(Site) %>%
-#   mutate(
-#     pland_decimal = pland*0.01
-#   ) %>%
-#   mutate_at(vars(Site, cover, plot_id), factor)
-# ```
-# 
-# ```{r}
-# p_cover
-# ```
-# 
-# ```{r}
-# head(p_cover)
-# ```
-
-```{r}
-plob_cover = read_csv('rpn_plob.csv')
+```{r, include = FALSE}
+#p_cover = read_csv('LSMclassGrid.csv') %>% 
+#  group_by(Site) %>%
+#  mutate(
+#    pland_decimal = pland*0.01
+#  ) %>%
+#  mutate_at(vars(Site, cover, plot_id), factor)
 ```
 
-```{r}
-plob_cover
-```
-```{r}
-plob_percent_cover = read_csv('rpn_plob.csv') %>% 
-  dplyr::select(plot_id, Site, pland) %>%
+```{r, include = TRUE}
+p_cover = read_csv('rpn_percent_cover.csv') %>% 
   group_by(Site) %>%
   mutate(
-    plob_cover = pland*0.01
+    pland_decimal = pland*0.01
   ) %>%
-  mutate_at(vars(Site, plot_id), factor)
+  mutate_at(vars(Site, cover, plot_id), factor)
 ```
 
 ```{r}
-plob_percent_cover
+p_cover
 ```
 
 ```{r}
-ggplot(plob_percent_cover, aes(x = plob_cover)) +
+head(p_cover)
+```
+
+```{r}
+ggplot(p_cover, aes(x = pland_decimal)) +
   geom_histogram(fill = "#333399") + 
   #below here is ylabel, xlabel, and main title
   ylab("Frequency") +
@@ -132,110 +110,22 @@ ggplot(plob_percent_cover, aes(x = plob_cover)) +
 
 ::: {.fold .s}
 ```{r}
-plot(plob_cover ~ Site, data = plob_percent_cover)
+plot(pland_decimal ~ Site, data = p_cover)
 ```
 :::
 
 ```{r}
-plob_cover.mean <-
-  plob_percent_cover %>%
+p_cover.mean <-
+  p_cover %>%
   group_by(Site) %>%
-  dplyr::summarise(mean = mean(plob_cover))
+  dplyr::summarise(mean = mean(pland_decimal))
 ```
 
 ```{r}
-plob_cover.mean
+p_cover.mean
 ```
 
-
-
-**Raw data - no transformation**
-
-```{r}
-plob_cover_mod.aov1 <- aov(plob_cover ~ Site, data = plob_percent_cover)
-summary(plob_cover_mod.aov1)
-```
-
-```{r}
-plob_cover_mod.lm1 <- lm(plob_cover ~ Site, data = plob_percent_cover)
-```
-
-```{r}
-summary(plob_cover_mod.lm1)
-```
-
-```{r}
-par(mfrow = c(2, 2))
-plot(plob_cover_mod.lm1)
-```
-
-```{r}
-Anova(plob_cover_mod.lm1, type = "III")
-```
-
-
-```{r}
-plob_percent_cover$plob_cover_scaled <- transform01(plob_percent_cover$plob_cover)
-```
-
-**Logit-transformation**
-
-```{r, include = FALSE}
-#p_cover[is.na(p_cover) | p_cover=="Inf"] = NA
-```
-
-```{r}
-plob_cover_mod.lm2 <- lm(logit(plob_cover_scaled) ~ Site, data = plob_percent_cover) 
-```
-
-```{r}
-summary(plob_cover_mod.lm2)
-```
-
-```{r}
-par(mfrow = c(2, 2))
-plot(plob_cover_mod.lm2)
-```
-
-```{r}
-Anova(plob_cover_mod.lm2, type = "III")
-```
-
-**Generalized-linear model**
-
-```{r}
-plob_cover_mod.glm1 <- glm(plob_cover ~ Site, family = binomial, data = plob_percent_cover)
-summary(plob_cover_mod.glm1)
-```
-
-```{r}
-par(mfrow = c(2, 2))
-plot(plob_cover_mod.glm1)
-```
-
-```{r}
-Anova(plob_cover_mod.glm1, type = "III")
-```
-
-# df has subjects (S), one factor (X) w/levels (a,b,c), and continuous response (Y) library(multcomp) # for glht, mcp , 
-
-test=adjusted(type="holm")) # the following also performs the equivalent contrast tests library(emmeans) # for emm, emmeans summary(glht(m, emm(pairwise ~ X)), test=adjusted(type="holm")) # or, using the Tukey HSD correction instead of Holm's summary(emmeans(m, pairwise ~ X, adjust="tukey", mode="linear.predictor", type="Score"))
-
-```{r}
-summary(glht(plob_cover_mod.glm1, mcp(Site = "Tukey")), test = adjusted(type = "holm"))
-```
-
-```{r}
-summary(glht(plob_cover_mod.glm1, emm(pairwise ~ Site)), test=adjusted(type="holm"))
-```
-
-```{r}
-summary(emmeans(plob_cover_mod.glm1, pairwise ~ Site, adjust="tukey", mode="linear.predictor", type="Score"))
-```
-
-
-
-## Methods for analyzing percent cover of poritid coral
+## Methods for analyzing percent cover of pocilloporid coral
 
 One option for dealing with the 0 and 1 values is to transform them to be slightly less than one or more than zero. This approach assumes that the data are consistent with a common beta distribution. We fit five models to the data: three variations on the beta model and two linear model approaches.
 
@@ -247,6 +137,27 @@ Other options based on assuming that the residuals are normally distributed is t
 
 For comparison this applies a logit-transformation to the empirical proportions and then uses a standard linear regression model.
 
+**Raw data - no transformation**
+
+```{r}
+p_cover_mod.aov1 <- aov(pland_decimal ~ Site, data = p_cover)
+summary(p_cover_mod.aov1)
+```
+
+```{r}
+p_cover_mod.lm1 <- lm(pland_decimal ~ Site, data = p_cover)
+summary(p_cover_mod.lm1)
+```
+
+```{r}
+par(mfrow = c(2, 2))
+plot(p_cover_mod.lm1)
+```
+
+```{r}
+Anova(p_cover_mod.lm1, type = "III")
+```
+
 One option to deal with 0 and 100 percent cover is to add and subtract a small amount to those values
 
 ```{r}
@@ -255,48 +166,91 @@ transform01 <- function(x) {
 }
 ```
 
-**Beta Regression I:** $\phi$ does not vary
-
 ```{r}
-plob_cover_mod.beta1 <- betareg(plob_cover_scaled ~ Site, data = plob_percent_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
+p_cover$pland_decimal_scaled <- transform01(p_cover$pland_decimal)
+```
+
+**Logit-transformation**
+
+```{r, include = FALSE}
+#p_cover[is.na(p_cover) | p_cover=="Inf"] = NA
 ```
 
 ```{r}
-summary(plob_cover_mod.beta1)
+p_cover_mod.lm2 <- lm(logit(pland_decimal_scaled) ~ Site, data = p_cover) 
+```
+
+```{r}
+summary(p_cover_mod.lm2)
+```
+
+```{r}
+par(mfrow = c(2, 2))
+plot(p_cover_mod.lm2)
+```
+
+```{r}
+Anova(p_cover_mod.lm2, type = "III")
+```
+
+**Generalized-linear model**
+
+```{r}
+p_cover_mod.glm1 <- glm(pland_decimal ~ Site, family = binomial, data = p_cover)
+summary(p_cover_mod.glm1)
+```
+
+```{r}
+par(mfrow = c(2, 2))
+plot(p_cover_mod.glm1)
+```
+
+```{r}
+Anova(p_cover_mod.glm1, type = "III")
+```
+
+**Beta Regression I:** $\phi$ does not vary
+
+```{r}
+p_cover_mod.beta1 <- betareg(pland_decimal_scaled ~ Site, data = p_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
+```
+
+```{r}
+summary(p_cover_mod.beta1)
 ```
 
 **Beta Regression II:** $\phi$ does vary (by **Site**)
 
 ```{r}
-plob_cover_mod.beta2 <- betareg(plob_cover_scaled ~ Site | Site, data = plob_percent_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
+p_cover_mod.beta2 <- betareg(pland_decimal_scaled ~ Site | Site, data = p_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
 ```
 
 \#`{r} #test(pairs(emmeans(p_cover.bm2, ~ Site, mode = "link"))) #`
 
 ```{r}
-plob_cover_mod.beta1.aov <- Anova(plob_cover_mod.beta1, type = 'III')
+p_cover_mod.beta1.aov <- Anova(p_cover_mod.beta1, type = 'III')
 ```
 
 ```{r}
-plob_cover_mod.beta2.aov <- Anova(plob_cover_mod.beta2, type = 'III')
+p_cover_mod.beta2.aov <- Anova(p_cover_mod.beta2, type = 'III')
 ```
 
 ```{r}
-plob_cover_mod.beta2.aov
+p_cover_mod.beta2.aov
 ```
 
 ```{r}
 models <- list(
   
-  'plob_cover_mod.beta1' = betareg(plob_cover_scaled ~ Site, 
-                                data = plob_percent_cover, 
+  'p_cover_mod.beta1' = betareg(pland_decimal_scaled ~ Site, 
+                                data = p_cover, 
                                 link = c("logit"), 
                                 link.phi = NULL, 
                                 type = c("ML")
                                 ),
   
-  'plob_cover_mod.beta2' = betareg(plob_cover_scaled ~ Site | Site, 
-                      data = plob_percent_cover,
+  'p_cover_mod.beta2' = betareg(pland_decimal_scaled ~ Site | Site, 
+                      data = p_cover,
                       link = c("logit"), 
                       link.phi = NULL, 
                       type = c("ML")
@@ -311,16 +265,16 @@ modelsummary(models)
 **Extract AIC from beta regression models**
 
 ```{r}
-plob_cover_mod.beta1_aic <- AIC(plob_cover_mod.beta1)
-plob_cover_mod.beta2_aic <- AIC(plob_cover_mod.beta2)
+p_cover_mod.beta1_aic <- AIC(p_cover_mod.beta1)
+p_cover_mod.beta2_aic <- AIC(p_cover_mod.beta2)
 ```
 
 ```{r}
-plob_cover_mod.beta1_aic
-plob_cover_mod.beta2_aic
+p_cover_mod.beta1_aic
+p_cover_mod.beta2_aic
 ```
 
-## Interpreting results for poritid corals
+## Interpreting results for pocilloporid corals
 
 In order to choose between the beta regression model with a common $\phi$ versus different $\phi$, I used **AIC** but a *likelihood ratio* or *wald test* could be used. Using **AIC**, the model with varying $\phi$ values had a lower AIC (-1518.568 compared to -1494.524) and therefore more support. We interpret the output from beta regression with the following:
 
@@ -335,9 +289,9 @@ Then $exp(\beta_1)$ is the factor increase/decrease in odds of proportion cover 
 **Beta Regression I:** $\phi$ does not vary
 
 ```{r, tab-betareg, echo=FALSE, eval=T, results = 'asis'}
-plob_cover_mod.beta1 <- betareg(plob_cover_scaled ~ Site, data = plob_percent_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
+p_cover_mod.beta1 <- betareg(pland_decimal_scaled ~ Site, data = p_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
 
-tab.mod <- Fcn.CreateSummary.betareg(plob_cover_mod.beta1)
+tab.mod <- Fcn.CreateSummary.betareg(p_cover_mod.beta1)
 
 print(xtable(tab.mod, digits = 3, caption = "Results from using betareg package in R by transforming the 0 and 1's. These are on the logit-scale for $\\mu$ with a common $\\phi$ parameter"), type = "html")
 ```
@@ -345,11 +299,11 @@ print(xtable(tab.mod, digits = 3, caption = "Results from using betareg package 
 **Beta Regression II:** $\phi$ does vary (by **Site**)
 
 ```{r}
-p_cover_mod.beta2 <- betareg(plob_cover_scaled ~ Site | Site, data = plob_percent_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
+p_cover_mod.beta2 <- betareg(pland_decimal_scaled ~ Site | Site, data = p_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
 ```
 
 ```{r}
-summary(plob_cover_mod.beta2)
+summary(p_cover_mod.beta2)
 ```
 
 Increase of percent cover from the baseline northern site by **factor of...**
@@ -361,7 +315,7 @@ exp(4.09928) # Percent cover of pocilloporids increased by a factor of 60 from t
 ```
 
 ```{r}
-confint(plob_cover_mod.beta2)
+confint(p_cover_mod.beta2)
 ```
 
 CIs for increase of percent cover from the baseline northern site by factor of...
@@ -504,34 +458,34 @@ plot(p_cover_mod.lm2, which = 2, main = "")
 
 ::: {.fold .o}
 ```{r, eval = T, collapse = T, message = FALSE}
-plob_cover.aov1 <- aov(plob_cover ~ Site, data = plob_percent_cover)
-summary(plob_cover.aov1)
+p_cover.aov1 <- aov(pland_decimal ~ Site, data = p_cover)
+summary(p_cover.aov1)
 ```
 :::
 
 ::: {.fold .o}
 ```{r, eval = T, collapse = T, message = FALSE}
-plob_cover.aov2 <- aov(plob_cover ~ Site + Error(plot_id), data = plob_percent_cover)
-summary(plob_cover.aov2)
+p_cover.aov2 <- aov(pland_decimal ~ Site + Error(plot_id), data = p_cover)
+summary(p_cover.aov2)
 ```
 :::
 
 A very similar analysis can be conducted using the library `nlme` for mixed effects modeling.
 
 ```{r}
-plob_cover.lme1 <- lme(plob_cover ~ Site, random = ~ 1 | plot_id, data = plob_percent_cover)
+p_cover.lme1 <- lme(pland_decimal ~ Site, random = ~ 1 | plot_id, data = p_cover)
 ```
 
 ```{r}
-anova(plob_cover.lme1)
+anova(p_cover.lme1)
 ```
 
 ```{r}
-plob_cover.lme_null <- lme(plob_cover ~ 1, random = ~ 1 | plot_id, data = plob_percent_cover)
+p_cover.lme_null <- lme(pland_decimal ~ 1, random = ~ 1 | plot_id, data = p_cover)
 ```
 
 ```{r}
-lmtest::lrtest(plob_cover.lme1, plob_cover.lme_null)
+lmtest::lrtest(p_cover.lme1, p_cover.lme_null)
 ```
 
 ### Beta regression with no variable precision $\phi$
@@ -543,7 +497,7 @@ The observations of percent cover are based on replicate quadrats replicated wit
 We begin by attempting to fit a beta regression model, with `pland_decimal` as the response, and `Site` as the categorical predictor.
 
 ```{r error = TRUE}
-plob_cover.bm1 <- betareg(plob_cover_scaled ~ Site, data = plob_percent_cover)
+p_cover.bm1 <- betareg(pland_decimal_scaled ~ Site, data = p_cover)
 ```
 
 `betareg` will not accept values of 0 and 1 in the response variable.
@@ -562,27 +516,27 @@ transform01 <- function(x) {
 }
 ```
 
-With this scaled data we can now successfully fit the model. And test its significance relative to a null model that assumes no effect of wave power on percent cover of poritid corals. For reference we also fit a classical ANOVA model assuming normally distributed errors using `lm`.
+With this scaled data we can now successfully fit the model. And test its significance relative to a null model that assumes no effect of wave power on percent cover of pocilloporid corals. For reference we also fit a classical ANOVA model assuming normally distributed errors using `lm`.
 
 ```{r}
-plob_cover.bmnull <- betareg(plob_cover_scaled ~ 1, data = plob_percent_cover)
-summary(plob_cover.bmnull)
+p_cover.bmnull <- betareg(pland_decimal_scaled ~ 1, data = p_cover)
+summary(p_cover.bmnull)
 ```
 
 ```{r}
-plob_cover.lm1 <- lm(plob_cover_scaled ~ Site, data = plob_percent_cover)
-summary(plob_cover.lm1)
+p_cover.lm1 <- lm(pland_decimal_scaled ~ Site, data = p_cover)
+summary(p_cover.lm1)
 ```
 
 ```{r}
-lmtest::lrtest(plob_cover.bm1, plob_cover.bmnull)
+lmtest::lrtest(p_cover.bm1, p_cover.bmnull)
 ```
 
 ```{r}
-AIC(plob_cover.bm1, plob_cover.lm1, plob_cover.bmnull)
+AIC(p_cover.bm1, p_cover.lm1, p_cover.bmnull)
 ```
 
-According to the likelihood-ratio test there is a significant difference between the null model and the treatment model. The AIC analysis supports this conclusion, but also highlights the improved model fit with beta regression relative to normal ANOVA (`lm1`). From this initial analysis we would tentatively conclude that using beta regression improves our ability to model the algal cover, but that there is no effect of grazer manipulation treatment.
+According to the likelihood-ratio test there is a significant difference between the null model and the treatment model. The AIC analysis supports this conclusion, but also highlights the improved model fit with beta regression relative to normal ANOVA (`lm1`). From this initial analysis we would tentatively conclude that using beta regresson improves our ability to model the algal cover, but that there is no effect of grazer manipulation treatment.
 
 It is useful to plot the predictions derived from the model and compare them to the observed data. First we define two new functions to allow us to use the `dbeta` and `rbeta` functions with the $\mu$ and $\phi$ parameterization.
 
@@ -604,11 +558,11 @@ With this function we can plot the distributions corresponding to the MLE parame
 ::: {.fold .s}
 ```{r}
 # extract coefficients of beta regression model
-coefs.bm1 <- coef(plob_cover.bm1)
+coefs.bm1 <- coef(p_cover.bm1)
 
 # create vector spanning the transformed 0-1 interval
 
-n.bm2 <- length(fitted(plob_cover.bm1))
+n.bm2 <- length(fitted(p_cover.bm1))
 x.range <- seq(0.5/n.bm2 , 1-0.5/n.bm2 , length.out = 200)
 x.range.bt <- (x.range*n.bm2 - 0.5)/(n.bm2-1)
 ```
@@ -646,7 +600,7 @@ Note that the vertical positioning of the dots is merely to prevent overplotting
 From this plot we can see that the model does a reasonable job of fitting beta distributions to each of the treatment levels... And that likewise, the variance of the groups .... This can be confirmed with a residual plot, using residuals calculated relative to their predicted variance.
 
 ```{r}
-plot(resid(plob_cover.bm1) ~ fitted(plob_cover.bm1))
+plot(resid(p_cover.bm1) ~ fitted(p_cover.bm1))
 ```
 
 Is this statement accurate?
@@ -658,39 +612,39 @@ The spread of the standardized residuals is strongly related to the fitted value
 We can repeat the above analysis using a model that allows $\phi$ to vary with predictors. This is achieved by adding a second part to the right hand side of the formula, separated with the `|` symbol. All covariates to the right of this `|` symbol will be used to model $\phi$. Note that they do not have to be the same covariates used to model $\mu$ (specified to the left of the `|`).
 
 ```{r}
-plob_cover.bm2 <- betareg(plob_cover_scaled ~ Site | Site, data = plob_percent_cover)
+p_cover.bm2 <- betareg(pland_decimal_scaled ~ Site | Site, data = p_cover)
 
-summary(plob_cover.bm2)
+summary(p_cover.bm2)
 ```
 
-From the `Coefficients` table we see that the estimate for $\mu$ in the Control treatment is `inv.logit(3.1694)` = `X` = X% coral cover. Moreover, the estimates of $\mu$ for the other two `Sites` (treatments) are each significantly higher.
+From the `Coefficients` table we see that the estimate for $\mu$ in the Control treatment is `inv.logit(-4.1313)` = `X` = X% coral cover. Moreover, the estimates of $\mu$ for the other two `Sites` (treatments) are each significantly higher.
 
 From the `Phi coefficients` table we can see that the maximum likelihood estimate of the precision is highest in the Control treatment and is reduced significantly relative to this baseline in each of other treatment groups. In other words, the model fit confirms our impression from the previous two graphs that a fixed $\phi$ model overestimates variance in the Control treatment, and underestimates it in the other three treatments.
 
 We can use likelihood-ratio tests to compare the new model to the fixed-$\phi$ and null models.
 
 ```{r}
-lmtest::lrtest(plob_cover.bm1, plob_cover.bm2)
-lmtest::lrtest(plob_cover.bmnull, plob_cover.bm1, plob_cover.bm2)
+lmtest::lrtest(p_cover.bm1, p_cover.bm2)
+lmtest::lrtest(p_cover.bmnull, p_cover.bm1, p_cover.bm2)
 ```
 
 The likelihood ratio tests indicate that the model with varying $\phi$ is significantly better than both the previous fixed $\phi$ model, and the null model. In this case the conclusion is that including the model for $\phi$ led to a better fitting model than both the fixed $\phi$ model and the null model.
 
-It is possible to apply post-hoc tests to identify which pairwise contrasts of treatments levels are significant.
+It is possible to apply post-hoc tests to identify which pariwise contrasts of treatments levels are significant.
 
 ```{r}
-test(pairs(emmeans(plob_cover.bm2, ~ Site, mode = "link")))
+test(pairs(emmeans(p_cover.bm2, ~ Site, mode = "link")))
 ```
 
 We conclude from this analysis that each `Site` treatment is significantly different to each other. This is an important point: **correct modeling of** $\phi$ can often be important for accurate inference on $\mu$.
 
-Residual plots confirm our conclusion that `plob_cover.bm2` provides a better fit to the observed data than `plob_cover.bm1`. This is seen by the more even spread of residuals in the second plot below.
+Residual plots confirm our conclusion that `p_cover.bm2` provides a better fit to the observed data than `p_cover.bm1`. This is seen by the more even spread of residuals in the second plot below.
 
 ::: {.fold .s}
 ```{r fig.height=10}
 par(mfrow = c(2, 1), oma = c(0, 0, 0, 0), mar = c(4, 4, 0.2, 0.2))
-plot(residuals(plob_cover.bm1) ~ fitted(plob_cover.bm1))
-plot(residuals(plob_cover.bm2) ~ fitted(plob_cover.bm2))
+plot(residuals(p_cover.bm1) ~ fitted(p_cover.bm1))
+plot(residuals(p_cover.bm2) ~ fitted(p_cover.bm2))
 ```
 :::
 
@@ -700,8 +654,8 @@ As above we can plot the MLE distributions for each of the treatments, based on 
 ```{r}
 # plot distributions
 muphi.bm2 <- unique(data.frame(
-  mu = fitted(plob_cover.bm2),
-  phi = predict(plob_cover.bm2, type = "precision"),
+  mu = fitted(p_cover.bm2),
+  phi = predict(p_cover.bm2, type = "precision"),
   treatment = p_cover$Site
 ))
 ```
@@ -748,7 +702,7 @@ rug(p_cover$pland_decimal[p_cover$Site == "vhu"], col = "blue", pos = 9.5, side 
 These plots support the conclusion from the likelihood ratio tests above. The best-fit distributions from the variable $\phi$ model better match the observed differences in dispersion between the different groups.
 
 ```{r}
-plob_cover <-
+poci_cover <-
 p_cover %>%
   as_tibble() %>%
 #  mutate(size_cm = area*10000) %>%
@@ -769,8 +723,8 @@ p_cover %>%
 ```
 
 ```{r}
-plob_cover2 <- 
-plob_cover %>%
+poci_cover2 <- 
+poci_cover %>%
   add_column(
           cld = c('a', 'b', 'c')
           ) %>%
@@ -778,7 +732,7 @@ mutate_at(vars(cld), factor)
 ```
 
 ```{r}
-plob_cover2
+poci_cover2
 ```
 
 ```{r}
@@ -787,14 +741,14 @@ x_labels = c("North", "West", "Southeast")
 ```
 
 ```{r}
-plob_cover.ggbarplot <- ggplot(plob_cover2, aes(x = location, y = mean, fill = x_labels)) +   
+poci_cover.ggbarplot <- ggplot(poci_cover2, aes(x = location, y = mean, fill = x_labels)) +   
   geom_bar(stat = "identity", width = 0.75, color = "black", linewidth = 0.50, alpha = 0.6) +
   geom_linerange(aes(ymin = lower.ci, ymax = upper.ci), size = 0.75) +
   scale_y_continuous(expression(paste("Mean Percent Cover (%)")), limits = c(0, 1)) + 
   scale_x_discrete(expand = c(0, 1), labels = x_labels) + 
   scale_fill_manual(values = c("#FFC74E", "#82A5C0", "#ABC178")) +
 #  facet_wrap( ~ depth2, labeller = as_labeller(label_names), dir = "v", ncol = 1) + 
-  ggtitle(expression(paste(italic(" plobllopora "), "spp."))) +
+  ggtitle(expression(paste(italic(" Pocillopora "), "spp."))) +
   geom_text(aes(label = cld, y = upper.ci), vjust = -0.5) +
   #scale_y_log10(expression(paste("Colony Size (", cm^2, ")"), limits = c(0, 100000))) +
   labs(x = NULL) +
@@ -816,5 +770,5 @@ plob_cover.ggbarplot <- ggplot(plob_cover2, aes(x = location, y = mean, fill = x
 ```
 
 ```{r}
-plob_cover.ggbarplot
+poci_cover.ggbarplot
 ```
