--- a/content/percent_cover_plob.qmd
+++ b/content/percent_cover_plob.qmd
@@ -55,31 +55,17 @@ Fcn.CreateSummary.betareg <- function(object.betareg){
    }
 ```
 
-# ```{r, include = FALSE}
-# #p_cover = read_csv('LSMclassGrid.csv') %>% 
-# #  group_by(Site) %>%
-# #  mutate(
-# #    pland_decimal = pland*0.01
-# #  ) %>%
-# #  mutate_at(vars(Site, cover, plot_id), factor)
-# ```
+# `{r, include = FALSE} # #p_cover = read_csv('LSMclassGrid.csv') %>%  # #  group_by(Site) %>% # #  mutate( # #    pland_decimal = pland*0.01 # #  ) %>% # #  mutate_at(vars(Site, cover, plot_id), factor) #`
 
-# ```{r, include = TRUE}
-# p_cover = read_csv('rpn_percent_cover.csv') %>% 
-#   group_by(Site) %>%
-#   mutate(
-#     pland_decimal = pland*0.01
-#   ) %>%
-#   mutate_at(vars(Site, cover, plot_id), factor)
-# ```
+# `{r, include = TRUE} # p_cover = read_csv('rpn_percent_cover.csv') %>%  #   group_by(Site) %>% #   mutate( #     pland_decimal = pland*0.01 #   ) %>% #   mutate_at(vars(Site, cover, plot_id), factor) #`
+
 # 
-# ```{r}
-# p_cover
-# ```
+
+# `{r} # p_cover #`
+
 # 
-# ```{r}
-# head(p_cover)
-# ```
+
+# `{r} # head(p_cover) #`
 
 ```{r}
 plob_cover = read_csv('rpn_plob.csv')
@@ -88,6 +74,7 @@ plob_cover = read_csv('rpn_plob.csv')
 ```{r}
 plob_cover
 ```
+
 ```{r}
 plob_percent_cover = read_csv('rpn_plob.csv') %>% 
   dplyr::select(plot_id, Site, pland) %>%
@@ -147,8 +134,6 @@ plob_cover.mean <-
 plob_cover.mean
 ```
 
-
-
 **Raw data - no transformation**
 
 ```{r}
@@ -172,7 +157,6 @@ plot(plob_cover_mod.lm1)
 ```{r}
 Anova(plob_cover_mod.lm1, type = "III")
 ```
-
 
 ```{r}
 plob_percent_cover$plob_cover_scaled <- transform01(plob_percent_cover$plob_cover)
@@ -217,9 +201,9 @@ plot(plob_cover_mod.glm1)
 Anova(plob_cover_mod.glm1, type = "III")
 ```
 
-# df has subjects (S), one factor (X) w/levels (a,b,c), and continuous response (Y) library(multcomp) # for glht, mcp , 
+# df has subjects (S), one factor (X) w/levels (a,b,c), and continuous response (Y) library(multcomp) \# for glht, mcp ,
 
-test=adjusted(type="holm")) # the following also performs the equivalent contrast tests library(emmeans) # for emm, emmeans summary(glht(m, emm(pairwise ~ X)), test=adjusted(type="holm")) # or, using the Tukey HSD correction instead of Holm's summary(emmeans(m, pairwise ~ X, adjust="tukey", mode="linear.predictor", type="Score"))
+test=adjusted(type="holm")) \# the following also performs the equivalent contrast tests library(emmeans) \# for emm, emmeans summary(glht(m, emm(pairwise \~ X)), test=adjusted(type="holm")) \# or, using the Tukey HSD correction instead of Holm's summary(emmeans(m, pairwise \~ X, adjust="tukey", mode="linear.predictor", type="Score"))
 
 ```{r}
 summary(glht(plob_cover_mod.glm1, mcp(Site = "Tukey")), test = adjusted(type = "holm"))
@@ -232,8 +216,6 @@ summary(glht(plob_cover_mod.glm1, emm(pairwise ~ Site)), test=adjusted(type="hol
 ```{r}
 summary(emmeans(plob_cover_mod.glm1, pairwise ~ Site, adjust="tukey", mode="linear.predictor", type="Score"))
 ```
-
-
 
 ## Methods for analyzing percent cover of poritid coral
 
